# PraxedoWsClient

./: .gitignore  pyproject.toml
src/: __init__.py  praxedo_ws_client.py  test_client.py
src/praxedo_ws/: TEST.__init__.py  __init__.py  praxedo_ws_client.py  pyproject.toml  soap_client.py  ws_client.py  ws_utility.py
src/praxedo_ws/soap/: __init__.py  soap_client.py
src/praxedo_ws/utility/: __init__.py  ws_utility.py
tests/: fetch_test.py  test_client.py  test_common.py  test_normalization.py  test_query.py  trial.py
