
[project]
name = "praxedo_web_service"
version = "0.0.0"
description = "A Praxedo SOAP Web Services client "
authors = [{ name = "IoMaz", email = "dizuzio@perso.ch" }]
dependencies = ["pandas",
                "zeep",
                "orjson",
                "jsonq",
                "python-jsonpath"
                ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
