
[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "praxedo_ws"
version = "0.2.0"
description = "A Praxedo SOAP Web Services client and utility"
authors = [{ name = "IoMaz", email = "dizuzio@perso.ch" }]
dependencies = [
    "pandas",
    "zeep",
    "orjson",
    "jsonq",
    "python-jsonpath",
    "pympler>=1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
